--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Environment Variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # Dependencies
-node_modules/
-dist/
-dist-ssr/
+node_modules
+dist
+dist-ssr
 *.local
 
 # Editor directories and files
@@ -30,6 +23,41 @@ dist-ssr/
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+build/
+dist/
+
+# Supabase
+.supabase/
+
+# Cloudflare Workers
+worker.js.map
+wrangler-sessions.json
+
+# Cache
+.cache/
+.parcel-cache/
+
+# Temporary files
+.tmp/
+temp/
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+
+# IDE files
+*.swp
+*.swo
+*~
 
 # Coverage directory used by tools like istanbul
 coverage/
@@ -47,11 +75,17 @@ jspm_packages/
 # Optional eslint cache
 .eslintcache
 
+# Optional REPL history
+.node_repl_history
+
 # Output of 'npm pack'
 *.tgz
 
 # Yarn Integrity file
 .yarn-integrity
+
+# dotenv environment variables file
+.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -71,17 +105,3 @@ dist
 # Temporary folders
 tmp/
 temp/
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
-
-# MacOS
-.DS_Store
-.AppleDouble
-.LSOverride
