--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.848.0",
     "@supabase/supabase-js": "^2.51.0",
     "@tailwindcss/vite": "^4.1.11",
+    "emoji-picker-react": "^4.13.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
